# ChangeLog for x11-apps/iceauth
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/iceauth/ChangeLog,v 1.35 2009/05/05 07:32:42 fauli Exp $

  05 May 2009; Christian Faulhammer <fauli@gentoo.org> iceauth-1.0.2.ebuild:
  fix repoman warnings

  09 Oct 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  -iceauth-1.0.1.ebuild:
  Drop old ebuilds.

  29 Sep 2007; Raúl Porcel <armin76@gentoo.org> iceauth-1.0.2.ebuild:
  sparc stable wrt #191615

  28 Sep 2007; Joshua Kinard <kumba@gentoo.org> iceauth-1.0.2.ebuild:
  Stable on mips, per #191615.

  10 Sep 2007; Jeroen Roovers <jer@gentoo.org> iceauth-1.0.2.ebuild:
  Stable for HPPA (bug #191615).

  09 Sep 2007; Raúl Porcel <armin76@gentoo.org> iceauth-1.0.2.ebuild:
  alpha/ia64 stable wrt #191615

  08 Sep 2007; Joseph Jezak <josejx@gentoo.org> iceauth-1.0.2.ebuild:
  Marked ppc/ppc64 stable for bug #191615.

  07 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org> iceauth-1.0.2.ebuild:
  Stable on amd64 wrt bug #191615.

  07 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org> iceauth-1.0.2.ebuild:
  Stable on x86 wrt bug #191615.

*iceauth-1.0.2 (01 Aug 2007)

  01 Aug 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  +iceauth-1.0.2.ebuild:
  Bump. Coverity fixes, fix coredump if signal caught during initialization,
  ANSIfy function declarations, constify some static data constants, reduction
  of RW data in binary, manpage fixes, automake 1.10 compat.

  10 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; iceauth-1.0.1.ebuild:
  Update description to be less generic.

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> iceauth-1.0.1.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> iceauth-1.0.1.ebuild:
  Mark 1.0.1 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; iceauth-1.0.1.ebuild:
  ppc/sparc/mips/alpha/arm/sh stable

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> iceauth-1.0.1.ebuild:
  Stable on amd64.
