@@ -1,4 +1,6 @@
 DIST iceauth-1.0.2.tar.bz2 97052 RMD160 c036cbce847cb73780520270bef28659ed8f8c80 SHA1 31cb5e07ea928b2a85af25d69535726e0d8c08d9 SHA256 06401591de57a2c4cf2255e3d5230ea19351c5516cf8dae98c61092392bab5bb
+DIST iceauth-1.0.3.tar.bz2 106197 RMD160 0cc6af2cb8b0dd3f7a6cb839b9a8ea3baa6ec1fd SHA1 b75b87fed108bc4fe14ef06f76025016fa54299a SHA256 abca3ff6c9f2da2600a474f0e92ae5e62c43914f7bd3d948b91b0a7f9117d81e
 EBUILD iceauth-1.0.2.ebuild 525 RMD160 96c25697cb99b46b3d523d8deb2b56f2d03dddab SHA1 dee4306be319171f8f5aaa12bcf8c109c85ab1f8 SHA256 32b1257cbb1ae28cbb93251bf71c855f914c4e5e08672450345f5beeb9e83ee6
-MISC ChangeLog 4140 RMD160 475bed0c7ed8b118012d4a20659263323ba00d6b SHA1 68dcb6907962589db88ee8c6908dabf369b2422a SHA256 ee07573b0f8ea0f468afa80b2d8745cceddc3c2bb78d5e109d17635b39716bb6
+EBUILD iceauth-1.0.3.ebuild 460 RMD160 ff15b6e44d41cbbcba5b70a6916e8592e331ace4 SHA1 497ae4e56db41cc9d06328047e4879a4c1c67a7f SHA256 45ef4ccdbc60b3be4e1d394c2d3edccaed8bd01435e6c37843fd847d70ca256c
+MISC ChangeLog 4274 RMD160 b29212bed57651cbe91a0913f5559797d19c05d4 SHA1 73ce1e5d35f5957fa7d2b9e4ca745dc6573b6566 SHA256 7b402c506d7e20384f155a09031fd71571f314d62c7ae7f65fc5263e5c3580c7
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
