@@ -1,6 +1,11 @@
 # ChangeLog for x11-apps/iceauth
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/iceauth/ChangeLog,v 1.35 2009/05/05 07:32:42 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/iceauth/ChangeLog,v 1.36 2009/10/12 17:23:52 remi Exp $
+
+*iceauth-1.0.3 (12 Oct 2009)
+
+  12 Oct 2009; Rémi Cardona <remi@gentoo.org> +iceauth-1.0.3.ebuild:
+  bump to 1.0.3, add missing IUSE
 
   05 May 2009; Christian Faulhammer <fauli@gentoo.org> iceauth-1.0.2.ebuild:
   fix repoman warnings
